kubernetes/apps/media/qbittorrent/mousehole-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mousehole
  labels:
    homelab.mpdavis.com/exposure: tailnet
spec:
  entryPoints:
    - tailnet
  routes:
    - match: Host(`mousehole.${DOMAIN}`)
      kind: Rule
      services:
        - name: mousehole
          port: 5010
  tls: {}
